[package]
name = "ia_strategic_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
log = "0.4"
env_logger = "0.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
config = "0.13"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"